--- a/AppTel.WinService/packages.config
+++ b/AppTel.WinService/packages.config
@@ -2,11 +2,13 @@
 <packages>
   <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Cors" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="3.0.0" targetFramework="net45" />
   <package id="mongocsharpdriver" version="1.10.0" targetFramework="net45" />
