--- a/AppTel.Web/AppTel.Web.csproj
+++ b/AppTel.Web/AppTel.Web.csproj
@@ -141,6 +141,8 @@
     <Content Include="Scripts\jquery-2.1.3.min.js" />
     <Content Include="Scripts\jquery-2.1.3.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -168,6 +170,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\PingSchedule\Index.cshtml" />
     <Content Include="Views\PingSchedule\Create.cshtml" />
+    <Content Include="Views\PingSchedule\_ScheduleTable.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
