--- a/AppTel.WinService/AppTel.WinService.csproj
+++ b/AppTel.WinService/AppTel.WinService.csproj
@@ -108,9 +108,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\JobController.cs" />
     <Compile Include="Controllers\PulseController.cs" />
     <Compile Include="Jobs\PingJob.cs" />
+    <Compile Include="Models\AppError.cs" />
     <Compile Include="Models\JobModel.cs" />
     <Compile Include="Models\PulseModel.cs" />
     <Compile Include="Program.cs" />
