Added a domain class to get appmetrics

--- a/AppTel.Domain.Tests/App.config
+++ b/AppTel.Domain.Tests/App.config
@@ -2,6 +2,6 @@
 <configuration>
   <appSettings>
     <add key="MongoDBURI" value="mongodb://localhost"/>
-    <add key="AppTel_DatabaseName" value="apptel"/>
+    <add key="AppTel_DatabaseName" value="apptel_test"/>
   </appSettings>
 </configuration>
